# monarch-mcp

./: .env  .gitignore  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: react_agent.py
scripts/: configure_claude.py
src/monarch_mcp/: server.py
src/monarch_mcp/tools/: __init__.py  disease.py  entity.py  gene.py  histopheno.py  mapping.py  phenotype.py  search.py  similarity.py
tests/: test_disease_tools.py  test_entity_tools.py  test_gene_tools.py  test_mapping_tools.py  test_phenotype_tools.py  test_search_tools.py  test_similarity_tools.py
