[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monarch-mcp"
version = "0.1.0"
description = "MCP server for querying Monarch Initiative API"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Zhong Ren", email = "zhong.ren@hotmail.com"}]
dependencies = [
    "mcp",
    "aiohttp",
    "pydantic",
    "httpx",
    "pytest",
    "pytest-asyncio",
    "openai",
    "python-dotenv",
]

[project.scripts]
monarch-mcp = "monarch_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"